--- a/package.json
+++ b/package.json
@@ -11,20 +11,21 @@
     "server": "pm2 start ./build/index.js --name softcomhubs --env production"
   },
   "dependencies": {
-    "knex": "3.1.0",
-    "axios": "^1.4.0",
+    "axios": "^1.8.4",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.19.2",
     "http-status-codes": "^2.2.0",
     "jsonwebtoken": "^8.5.1",
+    "knex": "3.1.0",
     "moment": "2.30.1",
     "morgan-body": "^2.6.9",
     "mysql2": "3.6.0",
     "node-schedule": "^2.1.1",
     "uuid": "9.0.0",
     "winston": "^3.14.2",
+    "xlsx": "^0.18.5",
     "yup": "1.2.0"
   },
   "devDependencies": {
